增加用户信息显示及工作流关联功能